exclude image folders

--- a/BackEnd/vercel.json
+++ b/BackEnd/vercel.json
@@ -1,10 +1,25 @@
 {
   "version": 2,
   "builds": [{ "src": "dist/main.ts", "use": "@vercel/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "dist/main.ts", "methods": [
-    "GET",
-    "POST",
-    "PUT",
-    "DELETE"
-  ]}]
+  "routes": [
+    {
+      "src": "/category/(.*)",
+      "dest": "/category/$1",
+      "headers": {
+        "Cache-Control": "public,max-age=31536000,immutable"
+      }
+    },
+    {
+      "src": "/products/(.*)",
+      "dest": "/products/$1",
+      "headers": {
+        "Cache-Control": "public,max-age=31536000,immutable"
+      }
+    },
+    {
+      "src": "/(.*)",
+      "dest": "dist/main.ts",
+      "methods": ["GET", "POST", "PUT", "DELETE"]
+    }
+  ]
 }
